<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- 1- Header: Logo + App Name -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/grid_container">

        <TextView
            android:layout_marginTop="3dp"
            android:id="@+id/app_name"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/trips_in_palestine"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    &lt;!&ndash; Container for the "grid" &ndash;&gt;-->
<!--    <TextView-->
<!--        android:layout_marginTop="3dp"-->
<!--        android:id="@+id/txtViewEnjoy"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:padding="5dp"-->
<!--        android:text="@string/enjoy_the_views_of_palestine"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="#CA1919"-->
<!--        android:textSize="22sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/grid_container"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/header_layout" />-->

    <LinearLayout
        android:id="@+id/grid_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/trips_header_layout"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_corners"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/dome_of_the_rock" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/batir" />
        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corners"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/old_jaffa" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_corners"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/akka" />
        </LinearLayout>

    </LinearLayout>


    <!-- 4- Title + Expand Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trips_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/trips_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/grid_container">

        <TextView
            android:id="@+id/trips_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommended_trips"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/btnExpand"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/expand_trips"
            android:scaleType="fitXY"
            android:src="@drawable/ic_expand"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 5- RecyclerView (Horizontal) -->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="3dp"
        android:id="@+id/trips_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trips_header_layout"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_layout"/>


    <!-- 6- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottom_nav_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Home -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/homeImgBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/home"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_home" />

            <TextView
                android:id="@+id/hometxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <!-- Search -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/searchImgBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bookings"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_search" />

            <TextView
                android:id="@+id/searchtxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <!-- Saved -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/savedImgBtn"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/saved"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_save" />

            <TextView
                android:id="@+id/savedtxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <!-- Bookings -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bookingsImgBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bookings"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_book" />

            <TextView
                android:id="@+id/bookingstxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookings"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

